crates/sql-orm/tests/ui/entity_identity_invalid_type.stderr
error: identity solo se soporta sobre tipos enteros
 --> tests/ui/entity_identity_invalid_type.rs:7:13
  |
7 |     pub id: String,
  |             ^^^^^^
