crates/sql-orm/tests/ui/entity_identity_invalid_type.rs
use sql_orm::prelude::*;

#[derive(Entity)]
pub struct InvalidIdentity {
    #[orm(primary_key)]
    #[orm(identity)]
    pub id: String,
}

fn main() {}
